network_policy/xm-ai/batch/allow_batch_job_access_minio.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: batch-job-can-access-minio
  namespace: pre-xmai-batch
spec:
  podSelector: {}
  egress:
  - to:
    # minio-ip
    - ipBlock:
        cidr: "192.168.255.169/32"
    - ipBlock:
        cidr: "192.168.255.141/32"
    - ipBlock:
        cidr: "192.168.255.65/32"
    - ipBlock:
        cidr: "192.168.255.12/32"
    ports:
    - protocol: TCP
      port: 9021
